[gd_scene load_steps=8 format=3 uid="uid://btbidqri5t7cx"]

[ext_resource type="PackedScene" uid="uid://divc2ithyhuj2" path="res://scenes/battlefields/common/base_battlefield/gui/pause_menu/music_button/music_button.tscn" id="1_0jdbh"]
[ext_resource type="Script" path="res://scenes/battlefields/common/base_battlefield/gui/pause_menu/pause_menu.gd" id="1_dcwff"]
[ext_resource type="PackedScene" uid="uid://c5r5fs41wchm6" path="res://scenes/battlefields/common/base_battlefield/gui/pause_menu/close_button/close_button.tscn" id="1_vdlnu"]
[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="2_8j7kr"]
[ext_resource type="PackedScene" uid="uid://g3tb8fv0v5he" path="res://scenes/battlefields/common/base_battlefield/gui/pause_menu/sfx_button/sfx_button.tscn" id="4_oskkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f77bn"]
bg_color = Color(0, 0, 0.360784, 0.2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uj708"]
bg_color = Color(0.2068, 0.53674, 0.94, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0196078, 0, 0.721569, 1)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_dcwff")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8j7kr")
theme_override_styles/panel = SubResource("StyleBoxFlat_f77bn")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -166.0
offset_right = 231.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uj708")

[node name="CloseButton" parent="Panel/Panel" instance=ExtResource("1_vdlnu")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.985
anchor_top = 0.016
anchor_right = 0.985
anchor_bottom = 0.016
offset_left = -43.07
offset_top = -43.312
offset_right = 42.93
offset_bottom = 43.688
grow_horizontal = 2
grow_vertical = 2
theme = null

[node name="MusicButton" parent="Panel/Panel" instance=ExtResource("1_0jdbh")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -107.0
offset_right = -12.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme = null
metadata/_edit_group_ = true

[node name="SfxButton" parent="Panel/Panel" instance=ExtResource("4_oskkn")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -107.0
offset_right = 99.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme = null

[node name="EscapeBattleButton" type="Button" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = 6.0
offset_right = 127.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "@EXIT_BATTLE"

[node name="ToMainMenuButton" type="Button" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = 70.0
offset_right = 127.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
text = "@EXIT_TO_MAIN_MENU"

[node name="Label" type="Label" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.0
offset_top = -38.0
offset_right = 157.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0.0196078, 0, 0.721569, 1)
theme_override_font_sizes/font_size = 48
text = "@PAUSE"
horizontal_alignment = 1
vertical_alignment = 1
